# ts_to_rs

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CURRENT_LOG  Cargo.toml  README.md  TODO  bench-history.jsonl  design.for_codex.md  next.codex-verification.md  note.after.md  plan.md  plan.prd.md  plan.t6.md  report.design-issues.md  rule_review_list.md  session-todos.md  tasks.2-5.md  tasks.d-2-2.md  tasks.d2-transformer-struct.md  tasks.expected-type-unification.md  tasks.md  tasks.type-resolution-unification.md
.claude/: settings.json
.codex/: config.toml
.serena/: project.yml
backlog/: 4d-b-utility-type-unification.md  4d-c-declaration-responsibility-separation.md  4e-typedef-error-propagation-and-type-alias-migration.md  I-050-any-coercion-umbrella.md  I-144-control-flow-narrowing-analyzer.md  I-161-I-171-truthy-emission-batch.md  I-177-B-collect-expr-leaf-types-cohesion.md  I-177-E-synthetic-fork-types-inheritance.md  I-177-F-resolve-arrow-fn-expr-block-end.md  I-184-ci-fresh-clone-template-file-fix.md  I-192-large-file-splitting.md  I-205-getter-setter-dispatch-framework.md  I-221-intersection-member-types.md  I-224-top-level-fn-main-mechanism.md  I-266-constructor-and-call-arg-expected-types.md  I-268-generic-and-optional-spread-expansion.md  I-270-builtin-type-struct-generation.md  I-297-spread-field-position-ordering.md  I-319-safe-array-indexing.md  I-377-ir-visitor-and-pattern-structuring.md  I-378-PRD-DEVIATION.md  I-378-expr-path-structuring.md  I-379-builtin-variant-value-position-structuring.md  I-380-pattern-structuring-and-walker-irvisitor.md  I-383-resolve-type-ref-three-tier.md  I-386-resolve-type-ref-step3-and-test-fixture-cleanup.md  I-387-rust-type-structural-refinement.md  I-392-overload-callable-interface.md  I-399-e2e-test-isolation-defect.md  I-D-framework-rule-integration-cohesive-batch.md  I-D-main-framework-rule-integration-cohesive-batch.md  I-D-pre-audit-mechanism-bootstrap.md  I-test-coverage-81-perspectives.md  PRD-2.7-rule10-coverage-extension.md  any-unknown-representation.md  array-destructuring-ext.md  array-literal.md  array-spread-expression.md  async-main-tokio-e2e.md  break-continue.md  (+115 more)
doc/: completed-features.md  design-decisions.md
report/: I-224-spec-stage-v3-review-handoff.md  I-268-concrete-error-instances.md  I-399-root-cause-investigation.md  PRD-2.7-decorator-dispatch-audit.md  architecture-review.md  batch-4d-c-investigation.md  batch-5b-narrowing-investigation.md  (+70 more)
tests/compile-check/: Cargo.toml
tests/compile-check/src/: lib.rs
tests/e2e/rust-runner/: Cargo.toml
tests/e2e/rust-runner/src/: main.rs
(+1318 files in other folders)
