[workspace]
exclude = ["tests/compile-check", "tests/e2e/rust-runner"]

[package]
name = "ts_to_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ts_to_rs"
path = "src/main.rs"

[lib]
name = "ts_to_rs"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
swc_common = "21.0.1"
swc_ecma_ast = "23.0.0"
scopeguard = "1.2.0"
swc_ecma_parser = "39.1.0"

[dev-dependencies]
insta = "1.47.2"
tempfile = "3.27.0"
